--- a/Natural Language Processing/BERT_Summarizer.ipynb
+++ b/Natural Language Processing/BERT_Summarizer.ipynb
@@ -6,7 +6,7 @@
       "name": "BERT Summarizer.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNQhqGaGAvtPW9TwwAcBrEs",
+      "authorship_tag": "ABX9TyMCslGkRbW1eEJ3ouJ2WTUK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -442,6 +442,26 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Iiy6kekjdwET",
+        "colab_type": "text"
+      },
+      "source": [
+        "'''\n",
+        "\n",
+        "### Summarizer params:\n",
+        "- model: This gets used by the hugging face bert library to load the model, you can supply a custom trained model here\n",
+        "- custom_model: If you have a pre-trained model, you can add the model class here.\n",
+        "- custom_tokenizer:  If you have a custom tokenizer, you can add the tokenizer here.\n",
+        "- hidden: Needs to be negative, but allows you to pick which layer you want the embeddings to come from.\n",
+        "- reduce_option: It can be 'mean', 'median', or 'max'. This reduces the embedding layer for pooling.\n",
+        "- sentence_handler: The handler to process sentences. If want to use coreference, instantiate and pass CoreferenceHandler instance\n",
+        "\n",
+        "\n"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "xS6UZjawaqLH",
@@ -453,10 +473,7 @@
         "outputId": "a24424b9-efc9-4e66-9483-0b1a29e1e7f5"
       },
       "source": [
-        "model = Summarizer()\n",
-        "result = model(body, min_length=60)\n",
-        "full = ''.join(result)\n",
-        "print(full)"
+        "model = Summarizer()\n"
       ],
       "execution_count": 8,
       "outputs": [
@@ -473,6 +490,62 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "fQixJNxAekaT",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Model params:\n",
+        "- body: str # The string body that you want to summarize\n",
+        "- ratio: float # The ratio of sentences that you want for the final summary\n",
+        "- min_length: int # Parameter to specify to remove sentences that are less than 40 characters\n",
+        "- max_length: int # Parameter to specify to remove sentences greater than the max length,\n",
+        "- num_sentences: Number of sentences to use. Overrides ratio if supplied.\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WLUCHkU2ensI",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "result = model(body, min_length=60)\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "i5dkpGqyepRL",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "full = ''.join(result)\n",
+        "print(full)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UT3Xu6oqe0M0",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -573,7 +646,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "hg6XCYK1bfRF",
+        "id": "4Vn_mZiHdJs_",
         "colab_type": "code",
         "colab": {}
       },
